# GameOfLife

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json
src/: AppStateGame.cpp  AppStateGame.hpp  Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  Config.hpp
src/core/: AppState.hpp  CMakeLists.txt  Exception.hpp  ResourceManager.hpp  SFML.hpp  SFMLEvent.hpp  TextureManager.hpp
src/log/: CMakeLists.txt  LogUtil.hpp
src/logic/: CMakeLists.txt  Cell.hpp  Grid.cpp  Grid.hpp
src/util/: CMakeLists.txt  JsonReader.hpp
